parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COMMENT
    CONTINUE
    DEFAULT
    DIV
    EXIT
    FILE
    FORWARD
    IN
    LABEL
    NIL
    PACKED
    READLN
    SET
    SIZEOF
    SYM_AT
    SYM_CARET
    WITH
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> program_head routine SYM_DOT
Rule 2     program_head -> PROGRAM ID SYM_SEMICOLON
Rule 3     routine -> routine_head routine_body
Rule 4     sub_routine -> routine_head routine_body
Rule 5     routine_head -> label_part const_part type_part var_part routine_part
Rule 6     label_part -> epsilon
Rule 7     const_part -> CONST const_expr_list
Rule 8     const_part -> epsilon
Rule 9     const_expr_list -> const_expr_list ID SYM_EQ const_value SYM_SEMICOLON
Rule 10    const_expr_list -> ID SYM_EQ const_value SYM_SEMICOLON
Rule 11    const_expr_list -> const_expr_list ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON
Rule 12    const_expr_list -> ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON
Rule 13    const_value -> UNSIGNEDINTEGER
Rule 14    const_value -> REAL
Rule 15    const_value -> CHAR
Rule 16    const_value -> STR
Rule 17    const_value -> SYS_CONST
Rule 18    type_part -> TYPE type_decl_list
Rule 19    type_part -> epsilon
Rule 20    type_decl_list -> type_decl_list type_def
Rule 21    type_decl_list -> type_def
Rule 22    type_def -> ID SYM_EQ type_decl SYM_SEMICOLON
Rule 23    type_decl -> simple_type_decl
Rule 24    type_decl -> array_type_decl
Rule 25    type_decl -> record_type_decl
Rule 26    simple_type_decl -> SYS_TYPE
Rule 27    simple_type_decl -> ID
Rule 28    simple_type_decl -> SYM_LPAREN name_list SYM_RPAREN
Rule 29    simple_type_decl -> const_value SYM_RANGE const_value
Rule 30    simple_type_decl -> SYM_SUB const_value SYM_RANGE const_value
Rule 31    simple_type_decl -> SYM_SUB const_value SYM_RANGE SYM_SUB const_value
Rule 32    simple_type_decl -> ID SYM_RANGE ID
Rule 33    array_type_decl -> ARRAY SYM_LBRAC simple_type_decl SYM_RBRAC OF type_decl
Rule 34    record_type_decl -> RECORD field_decl_list END
Rule 35    field_decl_list -> field_decl_list field_decl
Rule 36    field_decl_list -> field_decl
Rule 37    field_decl -> name_list SYM_COLON type_decl SYM_SEMICOLON
Rule 38    name_list -> name_list SYM_COMMA ID
Rule 39    name_list -> ID
Rule 40    var_part -> VAR var_decl_list
Rule 41    var_part -> epsilon
Rule 42    var_decl_list -> var_decl_list var_decl
Rule 43    var_decl_list -> var_decl
Rule 44    var_decl -> name_list SYM_COLON type_decl SYM_SEMICOLON
Rule 45    routine_part -> routine_part func_decl
Rule 46    routine_part -> routine_part procedure_decl
Rule 47    routine_part -> func_decl
Rule 48    routine_part -> procedure_decl
Rule 49    routine_part -> epsilon
Rule 50    func_decl -> func_head SYM_SEMICOLON sub_routine SYM_SEMICOLON
Rule 51    func_head -> FUNCTION ID parameters SYM_COLON simple_type_decl
Rule 52    procedure_decl -> procedure_head SYM_SEMICOLON sub_routine SYM_SEMICOLON
Rule 53    procedure_head -> PROCEDURE ID parameters
Rule 54    parameters -> SYM_LPAREN para_decl_list SYM_RPAREN
Rule 55    parameters -> epsilon
Rule 56    para_decl_list -> para_decl_list SYM_SEMICOLON para_type_list
Rule 57    para_decl_list -> para_type_list
Rule 58    para_type_list -> var_para_list SYM_COLON simple_type_decl
Rule 59    para_type_list -> val_para_list SYM_COLON simple_type_decl
Rule 60    var_para_list -> VAR name_list
Rule 61    val_para_list -> name_list
Rule 62    routine_body -> compound_stmt
Rule 63    compound_stmt -> BEGIN stmt_list END
Rule 64    stmt_list -> stmt_list stmt SYM_SEMICOLON
Rule 65    stmt_list -> epsilon
Rule 66    stmt -> UNSIGNEDINTEGER SYM_COLON unlabelled_stmt
Rule 67    stmt -> unlabelled_stmt
Rule 68    unlabelled_stmt -> assign_stmt
Rule 69    unlabelled_stmt -> proc_stmt
Rule 70    unlabelled_stmt -> compound_stmt
Rule 71    unlabelled_stmt -> if_stmt
Rule 72    unlabelled_stmt -> repeat_stmt
Rule 73    unlabelled_stmt -> while_stmt
Rule 74    unlabelled_stmt -> for_stmt
Rule 75    unlabelled_stmt -> case_stmt
Rule 76    unlabelled_stmt -> goto_stmt
Rule 77    assign_stmt -> ID SYM_ASSIGN expression
Rule 78    assign_stmt -> ID SYM_LBRAC expression SYM_RBRAC SYM_ASSIGN expression
Rule 79    assign_stmt -> ID SYM_DOT ID SYM_ASSIGN expression
Rule 80    proc_stmt -> ID
Rule 81    proc_stmt -> ID SYM_LPAREN args_list SYM_RPAREN
Rule 82    proc_stmt -> SYS_PROC
Rule 83    proc_stmt -> SYS_PROC SYM_LPAREN expression_list SYM_RPAREN
Rule 84    proc_stmt -> READ SYM_LPAREN factor SYM_RPAREN
Rule 85    if_stmt -> IF expression THEN stmt else_clause
Rule 86    else_clause -> ELSE stmt
Rule 87    else_clause -> epsilon
Rule 88    repeat_stmt -> REPEAT stmt_list UNTIL expression
Rule 89    while_stmt -> WHILE expression DO stmt
Rule 90    for_stmt -> FOR ID SYM_ASSIGN expression direction expression DO stmt
Rule 91    direction -> TO
Rule 92    direction -> DOWNTO
Rule 93    case_stmt -> CASE expression OF case_expr_list END
Rule 94    case_expr_list -> case_expr_list case_expr
Rule 95    case_expr_list -> case_expr
Rule 96    case_expr -> const_value SYM_COLON stmt SYM_SEMICOLON
Rule 97    case_expr -> ID SYM_COLON stmt SYM_SEMICOLON
Rule 98    goto_stmt -> GOTO UNSIGNEDINTEGER
Rule 99    expression_list -> expression_list SYM_COMMA expression
Rule 100   expression_list -> expression
Rule 101   expression -> expression SYM_GE expr
Rule 102   expression -> expression SYM_GT expr
Rule 103   expression -> expression SYM_LE expr
Rule 104   expression -> expression SYM_LT expr
Rule 105   expression -> expression SYM_EQ expr
Rule 106   expression -> expression SYM_NE expr
Rule 107   expression -> expr
Rule 108   expr -> expr SYM_ADD term
Rule 109   expr -> expr SYM_SUB term
Rule 110   expr -> expr OR term
Rule 111   expr -> term
Rule 112   term -> term SYM_MUL factor
Rule 113   term -> term SYM_DIV factor
Rule 114   term -> term MOD factor
Rule 115   term -> term AND factor
Rule 116   term -> factor
Rule 117   factor -> ID
Rule 118   factor -> ID SYM_LPAREN args_list SYM_RPAREN
Rule 119   factor -> SYS_FUNCT
Rule 120   factor -> SYS_FUNCT SYM_LPAREN args_list SYM_RPAREN
Rule 121   factor -> const_value
Rule 122   factor -> SYM_LPAREN expression SYM_RPAREN
Rule 123   factor -> NOT factor
Rule 124   factor -> SYM_SUB factor
Rule 125   factor -> ID SYM_LBRAC expression SYM_RBRAC
Rule 126   factor -> ID SYM_DOT ID
Rule 127   args_list -> args_list SYM_COMMA expression
Rule 128   args_list -> expression
Rule 129   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 115
ARRAY                : 33
BEGIN                : 63
BREAK                : 
CASE                 : 93
CHAR                 : 15
COMMENT              : 
CONST                : 7
CONTINUE             : 
DEFAULT              : 
DIV                  : 
DO                   : 89 90
DOWNTO               : 92
ELSE                 : 86
END                  : 34 63 93
EXIT                 : 
FILE                 : 
FOR                  : 90
FORWARD              : 
FUNCTION             : 51
GOTO                 : 98
ID                   : 2 9 10 11 12 22 27 32 32 38 39 51 53 77 78 79 79 80 81 90 97 117 118 125 126 126
IF                   : 85
IN                   : 
LABEL                : 
MOD                  : 114
NIL                  : 
NOT                  : 123
OF                   : 33 93
OR                   : 110
PACKED               : 
PROCEDURE            : 53
PROGRAM              : 2
READ                 : 84
READLN               : 
REAL                 : 14
RECORD               : 34
REPEAT               : 88
SET                  : 
SIZEOF               : 
STR                  : 16
SYM_ADD              : 108
SYM_ASSIGN           : 77 78 79 90
SYM_AT               : 
SYM_CARET            : 
SYM_COLON            : 37 44 51 58 59 66 96 97
SYM_COMMA            : 38 99 127
SYM_DIV              : 113
SYM_DOT              : 1 79 126
SYM_EQ               : 9 10 11 12 22 105
SYM_GE               : 101
SYM_GT               : 102
SYM_LBRAC            : 33 78 125
SYM_LE               : 103
SYM_LPAREN           : 28 54 81 83 84 118 120 122
SYM_LT               : 104
SYM_MUL              : 112
SYM_NE               : 106
SYM_RANGE            : 29 30 31 32
SYM_RBRAC            : 33 78 125
SYM_RPAREN           : 28 54 81 83 84 118 120 122
SYM_SEMICOLON        : 2 9 10 11 12 22 37 44 50 50 52 52 56 64 96 97
SYM_SUB              : 11 12 30 31 31 109 124
SYS_CONST            : 17
SYS_FUNCT            : 119 120
SYS_PROC             : 82 83
SYS_TYPE             : 26
THEN                 : 85
TO                   : 91
TYPE                 : 18
UNSIGNEDINTEGER      : 13 66 98
UNTIL                : 88
VAR                  : 40 60
WHILE                : 89
WITH                 : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

args_list            : 81 118 120 127
array_type_decl      : 24
assign_stmt          : 68
case_expr            : 94 95
case_expr_list       : 93 94
case_stmt            : 75
compound_stmt        : 62 70
const_expr_list      : 7 9 11
const_part           : 5
const_value          : 9 10 11 12 29 29 30 30 31 31 96 121
direction            : 90
else_clause          : 85
epsilon              : 6 8 19 41 49 55 65 87
expr                 : 101 102 103 104 105 106 107 108 109 110
expression           : 77 78 78 79 85 88 89 90 90 93 99 100 101 102 103 104 105 106 122 125 127 128
expression_list      : 83 99
factor               : 84 112 113 114 115 116 123 124
field_decl           : 35 36
field_decl_list      : 34 35
for_stmt             : 74
func_decl            : 45 47
func_head            : 50
goto_stmt            : 76
if_stmt              : 71
label_part           : 5
name_list            : 28 37 38 44 60 61
para_decl_list       : 54 56
para_type_list       : 56 57
parameters           : 51 53
proc_stmt            : 69
procedure_decl       : 46 48
procedure_head       : 52
program              : 0
program_head         : 1
record_type_decl     : 25
repeat_stmt          : 72
routine              : 1
routine_body         : 3 4
routine_head         : 3 4
routine_part         : 5 45 46
simple_type_decl     : 23 33 51 58 59
stmt                 : 64 85 86 89 90 96 97
stmt_list            : 63 64 88
sub_routine          : 50 52
term                 : 108 109 110 111 112 113 114 115
type_decl            : 22 33 37 44
type_decl_list       : 18 20
type_def             : 20 21
type_part            : 5
unlabelled_stmt      : 66 67
val_para_list        : 59
var_decl             : 42 43
var_decl_list        : 40 42
var_para_list        : 58
var_part             : 5
while_stmt           : 73

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_head routine SYM_DOT
    (2) program_head -> . PROGRAM ID SYM_SEMICOLON

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_head                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_head . routine SYM_DOT
    (3) routine -> . routine_head routine_body
    (5) routine_head -> . label_part const_part type_part var_part routine_part
    (6) label_part -> . epsilon
    (129) epsilon -> .

    CONST           reduce using rule 129 (epsilon -> .)
    TYPE            reduce using rule 129 (epsilon -> .)
    VAR             reduce using rule 129 (epsilon -> .)
    FUNCTION        reduce using rule 129 (epsilon -> .)
    PROCEDURE       reduce using rule 129 (epsilon -> .)
    BEGIN           reduce using rule 129 (epsilon -> .)

    routine                        shift and go to state 4
    routine_head                   shift and go to state 5
    label_part                     shift and go to state 6
    epsilon                        shift and go to state 7

state 3

    (2) program_head -> PROGRAM . ID SYM_SEMICOLON

    ID              shift and go to state 8


state 4

    (1) program -> program_head routine . SYM_DOT

    SYM_DOT         shift and go to state 9


state 5

    (3) routine -> routine_head . routine_body
    (62) routine_body -> . compound_stmt
    (63) compound_stmt -> . BEGIN stmt_list END

    BEGIN           shift and go to state 12

    routine_body                   shift and go to state 10
    compound_stmt                  shift and go to state 11

state 6

    (5) routine_head -> label_part . const_part type_part var_part routine_part
    (7) const_part -> . CONST const_expr_list
    (8) const_part -> . epsilon
    (129) epsilon -> .

    CONST           shift and go to state 14
    TYPE            reduce using rule 129 (epsilon -> .)
    VAR             reduce using rule 129 (epsilon -> .)
    FUNCTION        reduce using rule 129 (epsilon -> .)
    PROCEDURE       reduce using rule 129 (epsilon -> .)
    BEGIN           reduce using rule 129 (epsilon -> .)

    const_part                     shift and go to state 13
    epsilon                        shift and go to state 15

state 7

    (6) label_part -> epsilon .

    CONST           reduce using rule 6 (label_part -> epsilon .)
    TYPE            reduce using rule 6 (label_part -> epsilon .)
    VAR             reduce using rule 6 (label_part -> epsilon .)
    FUNCTION        reduce using rule 6 (label_part -> epsilon .)
    PROCEDURE       reduce using rule 6 (label_part -> epsilon .)
    BEGIN           reduce using rule 6 (label_part -> epsilon .)


state 8

    (2) program_head -> PROGRAM ID . SYM_SEMICOLON

    SYM_SEMICOLON   shift and go to state 16


state 9

    (1) program -> program_head routine SYM_DOT .

    $end            reduce using rule 1 (program -> program_head routine SYM_DOT .)


state 10

    (3) routine -> routine_head routine_body .

    SYM_DOT         reduce using rule 3 (routine -> routine_head routine_body .)


state 11

    (62) routine_body -> compound_stmt .

    SYM_DOT         reduce using rule 62 (routine_body -> compound_stmt .)
    SYM_SEMICOLON   reduce using rule 62 (routine_body -> compound_stmt .)


state 12

    (63) compound_stmt -> BEGIN . stmt_list END
    (64) stmt_list -> . stmt_list stmt SYM_SEMICOLON
    (65) stmt_list -> . epsilon
    (129) epsilon -> .

    END             reduce using rule 129 (epsilon -> .)
    UNSIGNEDINTEGER reduce using rule 129 (epsilon -> .)
    ID              reduce using rule 129 (epsilon -> .)
    SYS_PROC        reduce using rule 129 (epsilon -> .)
    READ            reduce using rule 129 (epsilon -> .)
    BEGIN           reduce using rule 129 (epsilon -> .)
    IF              reduce using rule 129 (epsilon -> .)
    REPEAT          reduce using rule 129 (epsilon -> .)
    WHILE           reduce using rule 129 (epsilon -> .)
    FOR             reduce using rule 129 (epsilon -> .)
    CASE            reduce using rule 129 (epsilon -> .)
    GOTO            reduce using rule 129 (epsilon -> .)

    stmt_list                      shift and go to state 17
    epsilon                        shift and go to state 18

state 13

    (5) routine_head -> label_part const_part . type_part var_part routine_part
    (18) type_part -> . TYPE type_decl_list
    (19) type_part -> . epsilon
    (129) epsilon -> .

    TYPE            shift and go to state 20
    VAR             reduce using rule 129 (epsilon -> .)
    FUNCTION        reduce using rule 129 (epsilon -> .)
    PROCEDURE       reduce using rule 129 (epsilon -> .)
    BEGIN           reduce using rule 129 (epsilon -> .)

    type_part                      shift and go to state 19
    epsilon                        shift and go to state 21

state 14

    (7) const_part -> CONST . const_expr_list
    (9) const_expr_list -> . const_expr_list ID SYM_EQ const_value SYM_SEMICOLON
    (10) const_expr_list -> . ID SYM_EQ const_value SYM_SEMICOLON
    (11) const_expr_list -> . const_expr_list ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON
    (12) const_expr_list -> . ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON

    ID              shift and go to state 23

    const_expr_list                shift and go to state 22

state 15

    (8) const_part -> epsilon .

    TYPE            reduce using rule 8 (const_part -> epsilon .)
    VAR             reduce using rule 8 (const_part -> epsilon .)
    FUNCTION        reduce using rule 8 (const_part -> epsilon .)
    PROCEDURE       reduce using rule 8 (const_part -> epsilon .)
    BEGIN           reduce using rule 8 (const_part -> epsilon .)


state 16

    (2) program_head -> PROGRAM ID SYM_SEMICOLON .

    BEGIN           reduce using rule 2 (program_head -> PROGRAM ID SYM_SEMICOLON .)
    CONST           reduce using rule 2 (program_head -> PROGRAM ID SYM_SEMICOLON .)
    TYPE            reduce using rule 2 (program_head -> PROGRAM ID SYM_SEMICOLON .)
    VAR             reduce using rule 2 (program_head -> PROGRAM ID SYM_SEMICOLON .)
    FUNCTION        reduce using rule 2 (program_head -> PROGRAM ID SYM_SEMICOLON .)
    PROCEDURE       reduce using rule 2 (program_head -> PROGRAM ID SYM_SEMICOLON .)


state 17

    (63) compound_stmt -> BEGIN stmt_list . END
    (64) stmt_list -> stmt_list . stmt SYM_SEMICOLON
    (66) stmt -> . UNSIGNEDINTEGER SYM_COLON unlabelled_stmt
    (67) stmt -> . unlabelled_stmt
    (68) unlabelled_stmt -> . assign_stmt
    (69) unlabelled_stmt -> . proc_stmt
    (70) unlabelled_stmt -> . compound_stmt
    (71) unlabelled_stmt -> . if_stmt
    (72) unlabelled_stmt -> . repeat_stmt
    (73) unlabelled_stmt -> . while_stmt
    (74) unlabelled_stmt -> . for_stmt
    (75) unlabelled_stmt -> . case_stmt
    (76) unlabelled_stmt -> . goto_stmt
    (77) assign_stmt -> . ID SYM_ASSIGN expression
    (78) assign_stmt -> . ID SYM_LBRAC expression SYM_RBRAC SYM_ASSIGN expression
    (79) assign_stmt -> . ID SYM_DOT ID SYM_ASSIGN expression
    (80) proc_stmt -> . ID
    (81) proc_stmt -> . ID SYM_LPAREN args_list SYM_RPAREN
    (82) proc_stmt -> . SYS_PROC
    (83) proc_stmt -> . SYS_PROC SYM_LPAREN expression_list SYM_RPAREN
    (84) proc_stmt -> . READ SYM_LPAREN factor SYM_RPAREN
    (63) compound_stmt -> . BEGIN stmt_list END
    (85) if_stmt -> . IF expression THEN stmt else_clause
    (88) repeat_stmt -> . REPEAT stmt_list UNTIL expression
    (89) while_stmt -> . WHILE expression DO stmt
    (90) for_stmt -> . FOR ID SYM_ASSIGN expression direction expression DO stmt
    (93) case_stmt -> . CASE expression OF case_expr_list END
    (98) goto_stmt -> . GOTO UNSIGNEDINTEGER

    END             shift and go to state 24
    UNSIGNEDINTEGER shift and go to state 26
    ID              shift and go to state 37
    SYS_PROC        shift and go to state 38
    READ            shift and go to state 39
    BEGIN           shift and go to state 12
    IF              shift and go to state 40
    REPEAT          shift and go to state 41
    WHILE           shift and go to state 42
    FOR             shift and go to state 43
    CASE            shift and go to state 44
    GOTO            shift and go to state 45

    stmt                           shift and go to state 25
    unlabelled_stmt                shift and go to state 27
    assign_stmt                    shift and go to state 28
    proc_stmt                      shift and go to state 29
    compound_stmt                  shift and go to state 30
    if_stmt                        shift and go to state 31
    repeat_stmt                    shift and go to state 32
    while_stmt                     shift and go to state 33
    for_stmt                       shift and go to state 34
    case_stmt                      shift and go to state 35
    goto_stmt                      shift and go to state 36

state 18

    (65) stmt_list -> epsilon .

    END             reduce using rule 65 (stmt_list -> epsilon .)
    UNSIGNEDINTEGER reduce using rule 65 (stmt_list -> epsilon .)
    ID              reduce using rule 65 (stmt_list -> epsilon .)
    SYS_PROC        reduce using rule 65 (stmt_list -> epsilon .)
    READ            reduce using rule 65 (stmt_list -> epsilon .)
    BEGIN           reduce using rule 65 (stmt_list -> epsilon .)
    IF              reduce using rule 65 (stmt_list -> epsilon .)
    REPEAT          reduce using rule 65 (stmt_list -> epsilon .)
    WHILE           reduce using rule 65 (stmt_list -> epsilon .)
    FOR             reduce using rule 65 (stmt_list -> epsilon .)
    CASE            reduce using rule 65 (stmt_list -> epsilon .)
    GOTO            reduce using rule 65 (stmt_list -> epsilon .)
    UNTIL           reduce using rule 65 (stmt_list -> epsilon .)


state 19

    (5) routine_head -> label_part const_part type_part . var_part routine_part
    (40) var_part -> . VAR var_decl_list
    (41) var_part -> . epsilon
    (129) epsilon -> .

    VAR             shift and go to state 47
    FUNCTION        reduce using rule 129 (epsilon -> .)
    PROCEDURE       reduce using rule 129 (epsilon -> .)
    BEGIN           reduce using rule 129 (epsilon -> .)

    var_part                       shift and go to state 46
    epsilon                        shift and go to state 48

state 20

    (18) type_part -> TYPE . type_decl_list
    (20) type_decl_list -> . type_decl_list type_def
    (21) type_decl_list -> . type_def
    (22) type_def -> . ID SYM_EQ type_decl SYM_SEMICOLON

    ID              shift and go to state 51

    type_decl_list                 shift and go to state 49
    type_def                       shift and go to state 50

state 21

    (19) type_part -> epsilon .

    VAR             reduce using rule 19 (type_part -> epsilon .)
    FUNCTION        reduce using rule 19 (type_part -> epsilon .)
    PROCEDURE       reduce using rule 19 (type_part -> epsilon .)
    BEGIN           reduce using rule 19 (type_part -> epsilon .)


state 22

    (7) const_part -> CONST const_expr_list .
    (9) const_expr_list -> const_expr_list . ID SYM_EQ const_value SYM_SEMICOLON
    (11) const_expr_list -> const_expr_list . ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON

    TYPE            reduce using rule 7 (const_part -> CONST const_expr_list .)
    VAR             reduce using rule 7 (const_part -> CONST const_expr_list .)
    FUNCTION        reduce using rule 7 (const_part -> CONST const_expr_list .)
    PROCEDURE       reduce using rule 7 (const_part -> CONST const_expr_list .)
    BEGIN           reduce using rule 7 (const_part -> CONST const_expr_list .)
    ID              shift and go to state 52


state 23

    (10) const_expr_list -> ID . SYM_EQ const_value SYM_SEMICOLON
    (12) const_expr_list -> ID . SYM_EQ SYM_SUB const_value SYM_SEMICOLON

    SYM_EQ          shift and go to state 53


state 24

    (63) compound_stmt -> BEGIN stmt_list END .

    SYM_DOT         reduce using rule 63 (compound_stmt -> BEGIN stmt_list END .)
    SYM_SEMICOLON   reduce using rule 63 (compound_stmt -> BEGIN stmt_list END .)
    ELSE            reduce using rule 63 (compound_stmt -> BEGIN stmt_list END .)


state 25

    (64) stmt_list -> stmt_list stmt . SYM_SEMICOLON

    SYM_SEMICOLON   shift and go to state 54


state 26

    (66) stmt -> UNSIGNEDINTEGER . SYM_COLON unlabelled_stmt

    SYM_COLON       shift and go to state 55


state 27

    (67) stmt -> unlabelled_stmt .

    SYM_SEMICOLON   reduce using rule 67 (stmt -> unlabelled_stmt .)
    ELSE            reduce using rule 67 (stmt -> unlabelled_stmt .)


state 28

    (68) unlabelled_stmt -> assign_stmt .

    SYM_SEMICOLON   reduce using rule 68 (unlabelled_stmt -> assign_stmt .)
    ELSE            reduce using rule 68 (unlabelled_stmt -> assign_stmt .)


state 29

    (69) unlabelled_stmt -> proc_stmt .

    SYM_SEMICOLON   reduce using rule 69 (unlabelled_stmt -> proc_stmt .)
    ELSE            reduce using rule 69 (unlabelled_stmt -> proc_stmt .)


state 30

    (70) unlabelled_stmt -> compound_stmt .

    SYM_SEMICOLON   reduce using rule 70 (unlabelled_stmt -> compound_stmt .)
    ELSE            reduce using rule 70 (unlabelled_stmt -> compound_stmt .)


state 31

    (71) unlabelled_stmt -> if_stmt .

    SYM_SEMICOLON   reduce using rule 71 (unlabelled_stmt -> if_stmt .)
    ELSE            reduce using rule 71 (unlabelled_stmt -> if_stmt .)


state 32

    (72) unlabelled_stmt -> repeat_stmt .

    SYM_SEMICOLON   reduce using rule 72 (unlabelled_stmt -> repeat_stmt .)
    ELSE            reduce using rule 72 (unlabelled_stmt -> repeat_stmt .)


state 33

    (73) unlabelled_stmt -> while_stmt .

    SYM_SEMICOLON   reduce using rule 73 (unlabelled_stmt -> while_stmt .)
    ELSE            reduce using rule 73 (unlabelled_stmt -> while_stmt .)


state 34

    (74) unlabelled_stmt -> for_stmt .

    SYM_SEMICOLON   reduce using rule 74 (unlabelled_stmt -> for_stmt .)
    ELSE            reduce using rule 74 (unlabelled_stmt -> for_stmt .)


state 35

    (75) unlabelled_stmt -> case_stmt .

    SYM_SEMICOLON   reduce using rule 75 (unlabelled_stmt -> case_stmt .)
    ELSE            reduce using rule 75 (unlabelled_stmt -> case_stmt .)


state 36

    (76) unlabelled_stmt -> goto_stmt .

    SYM_SEMICOLON   reduce using rule 76 (unlabelled_stmt -> goto_stmt .)
    ELSE            reduce using rule 76 (unlabelled_stmt -> goto_stmt .)


state 37

    (77) assign_stmt -> ID . SYM_ASSIGN expression
    (78) assign_stmt -> ID . SYM_LBRAC expression SYM_RBRAC SYM_ASSIGN expression
    (79) assign_stmt -> ID . SYM_DOT ID SYM_ASSIGN expression
    (80) proc_stmt -> ID .
    (81) proc_stmt -> ID . SYM_LPAREN args_list SYM_RPAREN

    SYM_ASSIGN      shift and go to state 56
    SYM_LBRAC       shift and go to state 57
    SYM_DOT         shift and go to state 58
    SYM_SEMICOLON   reduce using rule 80 (proc_stmt -> ID .)
    ELSE            reduce using rule 80 (proc_stmt -> ID .)
    SYM_LPAREN      shift and go to state 59


state 38

    (82) proc_stmt -> SYS_PROC .
    (83) proc_stmt -> SYS_PROC . SYM_LPAREN expression_list SYM_RPAREN

    SYM_SEMICOLON   reduce using rule 82 (proc_stmt -> SYS_PROC .)
    ELSE            reduce using rule 82 (proc_stmt -> SYS_PROC .)
    SYM_LPAREN      shift and go to state 60


state 39

    (84) proc_stmt -> READ . SYM_LPAREN factor SYM_RPAREN

    SYM_LPAREN      shift and go to state 61


state 40

    (85) if_stmt -> IF . expression THEN stmt else_clause
    (101) expression -> . expression SYM_GE expr
    (102) expression -> . expression SYM_GT expr
    (103) expression -> . expression SYM_LE expr
    (104) expression -> . expression SYM_LT expr
    (105) expression -> . expression SYM_EQ expr
    (106) expression -> . expression SYM_NE expr
    (107) expression -> . expr
    (108) expr -> . expr SYM_ADD term
    (109) expr -> . expr SYM_SUB term
    (110) expr -> . expr OR term
    (111) expr -> . term
    (112) term -> . term SYM_MUL factor
    (113) term -> . term SYM_DIV factor
    (114) term -> . term MOD factor
    (115) term -> . term AND factor
    (116) term -> . factor
    (117) factor -> . ID
    (118) factor -> . ID SYM_LPAREN args_list SYM_RPAREN
    (119) factor -> . SYS_FUNCT
    (120) factor -> . SYS_FUNCT SYM_LPAREN args_list SYM_RPAREN
    (121) factor -> . const_value
    (122) factor -> . SYM_LPAREN expression SYM_RPAREN
    (123) factor -> . NOT factor
    (124) factor -> . SYM_SUB factor
    (125) factor -> . ID SYM_LBRAC expression SYM_RBRAC
    (126) factor -> . ID SYM_DOT ID
    (13) const_value -> . UNSIGNEDINTEGER
    (14) const_value -> . REAL
    (15) const_value -> . CHAR
    (16) const_value -> . STR
    (17) const_value -> . SYS_CONST

    ID              shift and go to state 67
    SYS_FUNCT       shift and go to state 69
    SYM_LPAREN      shift and go to state 68
    NOT             shift and go to state 71
    SYM_SUB         shift and go to state 65
    UNSIGNEDINTEGER shift and go to state 72
    REAL            shift and go to state 73
    CHAR            shift and go to state 74
    STR             shift and go to state 75
    SYS_CONST       shift and go to state 76

    expression                     shift and go to state 62
    expr                           shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 66
    const_value                    shift and go to state 70

state 41

    (88) repeat_stmt -> REPEAT . stmt_list UNTIL expression
    (64) stmt_list -> . stmt_list stmt SYM_SEMICOLON
    (65) stmt_list -> . epsilon
    (129) epsilon -> .

    UNTIL           reduce using rule 129 (epsilon -> .)
    UNSIGNEDINTEGER reduce using rule 129 (epsilon -> .)
    ID              reduce using rule 129 (epsilon -> .)
    SYS_PROC        reduce using rule 129 (epsilon -> .)
    READ            reduce using rule 129 (epsilon -> .)
    BEGIN           reduce using rule 129 (epsilon -> .)
    IF              reduce using rule 129 (epsilon -> .)
    REPEAT          reduce using rule 129 (epsilon -> .)
    WHILE           reduce using rule 129 (epsilon -> .)
    FOR             reduce using rule 129 (epsilon -> .)
    CASE            reduce using rule 129 (epsilon -> .)
    GOTO            reduce using rule 129 (epsilon -> .)

    stmt_list                      shift and go to state 77
    epsilon                        shift and go to state 18

state 42

    (89) while_stmt -> WHILE . expression DO stmt
    (101) expression -> . expression SYM_GE expr
    (102) expression -> . expression SYM_GT expr
    (103) expression -> . expression SYM_LE expr
    (104) expression -> . expression SYM_LT expr
    (105) expression -> . expression SYM_EQ expr
    (106) expression -> . expression SYM_NE expr
    (107) expression -> . expr
    (108) expr -> . expr SYM_ADD term
    (109) expr -> . expr SYM_SUB term
    (110) expr -> . expr OR term
    (111) expr -> . term
    (112) term -> . term SYM_MUL factor
    (113) term -> . term SYM_DIV factor
    (114) term -> . term MOD factor
    (115) term -> . term AND factor
    (116) term -> . factor
    (117) factor -> . ID
    (118) factor -> . ID SYM_LPAREN args_list SYM_RPAREN
    (119) factor -> . SYS_FUNCT
    (120) factor -> . SYS_FUNCT SYM_LPAREN args_list SYM_RPAREN
    (121) factor -> . const_value
    (122) factor -> . SYM_LPAREN expression SYM_RPAREN
    (123) factor -> . NOT factor
    (124) factor -> . SYM_SUB factor
    (125) factor -> . ID SYM_LBRAC expression SYM_RBRAC
    (126) factor -> . ID SYM_DOT ID
    (13) const_value -> . UNSIGNEDINTEGER
    (14) const_value -> . REAL
    (15) const_value -> . CHAR
    (16) const_value -> . STR
    (17) const_value -> . SYS_CONST

    ID              shift and go to state 67
    SYS_FUNCT       shift and go to state 69
    SYM_LPAREN      shift and go to state 68
    NOT             shift and go to state 71
    SYM_SUB         shift and go to state 65
    UNSIGNEDINTEGER shift and go to state 72
    REAL            shift and go to state 73
    CHAR            shift and go to state 74
    STR             shift and go to state 75
    SYS_CONST       shift and go to state 76

    expression                     shift and go to state 78
    expr                           shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 66
    const_value                    shift and go to state 70

state 43

    (90) for_stmt -> FOR . ID SYM_ASSIGN expression direction expression DO stmt

    ID              shift and go to state 79


state 44
